# tommyroar.github.io

./: .gitignore  404.html  AGENTS.md  GEMINI.md  INDEX.md  README.md  TAILSCALE_AUTH.md  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sitemap.xml  vite.config.js
.claude/hooks/: session-start.sh
.github/: uptime-targets.yml
.github/workflows/: auto-discover.yml  deploy.yml  uptime-probe.yml  weekly-wiki-roundup.yml
apps/: Bathymetryst.json  intentcity.json  is-the-mountain-out.json  maps.json  publisher.json  sporty40.json  vitamin-d.json  vitamind.json  walksheds.json
data/: uptime-current.json  uptime-history.jsonl  uptime-summary.json
docs/: index.md
prompts/: weekly-wiki-roundup.md
scripts/: auth_logic.js  auth_logic.test.js  auth_server.js  auto_discover.py  bundle_apps.js  com.tommyroar.tailscale-auth.plist  generate_index.py  manage_auth.py  manage_projects.py  probe-uptime.mjs
search/: search_index.json
src/: App.jsx  App.test.jsx  Monitoring.jsx  NintendoSelector.css  NintendoSelector.jsx  main.jsx
src/data/: projects.json
tests/: test_generate_index.py
