[project]
name = "scripts"
version = "0.1.0"
description = "Project management scripts for tommyroar.github.io"
requires-python = ">=3.14"
dependencies = [
    "questionary>=2.1.0",
    "rich>=13.9.0",
    "slugify>=0.0.1",
    "python-slugify>=8.0.0",
]

[project.scripts]
add = "scripts.manage_projects:add_project"
edit = "scripts.manage_projects:edit_project"

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
