[project]
name = "scripts"
version = "0.1.0"
description = "Project management scripts for tommyroar.github.io"
requires-python = ">=3.12"
dependencies = [
    "questionary>=2.1.0",
    "rich>=13.9.0",
    "slugify>=0.0.1",
    "python-slugify>=8.0.0",
    "segno>=1.6.1",
]

[project.scripts]
add = "scripts.manage_projects:add_project"
edit = "scripts.manage_projects:edit_project"
remove = "scripts.manage_projects:remove_project"
bundle = "scripts.manage_projects:bundle"

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
